# rticonnextdds-medtech-reference-architecture

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE_PLAN.md  build.py  doc-issues.md  launch.py  pyproject.toml  requirements-dev.txt  requirements.txt  scenarios.json
.github/workflows/: ci.yml
containers/base/: Dockerfile
containers/examples/: Dockerfile
demos/demo1/: CMakeLists.txt  README.md  kill_all.sh  launch_all.sh
demos/demo1/scripts/: common.sh  kill_all.sh  launch_OR_apps.sh  launch_all.sh  launch_arm_and_patient_monitor.sh  launch_arm_controller.sh
demos/demo1/security/: setup_security.sh
demos/demo1/security/identities/Arm/: Arm.cnf
demos/demo1/security/identities/ArmController/: ArmController.cnf
demos/demo1/security/identities/Orchestrator/: Orchestrator.cnf
demos/demo1/security/identities/PatientMonitor/: PatientMonitor.cnf
demos/demo1/security/identities/PatientSensor/: PatientSensor.cnf
demos/demo1/src/: Arm.py  ArmController.cxx  DdsUtils.hpp  Orchestrator.cxx  PatientMonitor.py  PatientSensor.cxx
demos/demo2/: README.md  RecordingServiceConfiguration.xml  ReplayServiceConfiguration.xml  launch_arm_and_patient_monitor.sh
demos/demo3/: README.md  Scenario1.md  Scenario2.md  Scenario3.md
demos/security/: setup_security.sh
docs/: CONTRIBUTING.md
docs/release/: CHANGELOG.md  RELEASE_PLAN.md  TEMP_pylint_vs_ruff_launch_analysis.md
examples/: README.md
examples/CANoe/: README.md  RTIMedTech.cfg  RTIMedTech.cfg.ini  RobotPanel.xvp  SurgicalRobot.vCDL  telemetry.py
examples/WIS/: readme.md
examples/joystick_controller/: README.md  joystick_controller.py  launch_arm_joystick.sh
examples/lss_robot/: README.md  launch_robot_app.sh  lss_robot_app.py
examples/telemetry_bridge/: README.md  launch_telemetry_app.sh  telemetry_app.py
examples/xbox_controller/: README.md  launch_arm_xbox.sh  xbox_controller.py
modules/01-operating-room/: CMakeLists.txt  Orchestrator.cxx  PatientMonitor.py  README.md  module.json  pyproject.toml
modules/01-operating-room/scripts/: build.py  build.sh  common.sh  kill_all.py  kill_all.sh  launch_OR_apps.py  launch_OR_apps.sh  launch_all.py  launch_arm_and_patient_monitor.py  launch_arm_and_patient_monitor.sh  launch_arm_controller.py  launch_arm_controller.sh  xml_setup.py
modules/01-operating-room/src/: Arm.py  ArmController.cxx  DdsUtils.hpp  DdsUtils.py  MacOsDockIcon.h  Orchestrator.cxx  PatientMonitor.py  PatientSensor.cxx  SecureLogUtils.hpp
modules/01-operating-room/tests/: README.md  conftest.py  module01_test_support.py  test_build.py  test_build_and_types.py  test_dds_communication.py  test_demo_flow.py  test_launch.py  test_scripts.py  test_types.py  test_xml_qos.py
modules/01-operating-room/ui/: arm.glade  armcontroller.css  armcontroller.glade  orchestrator.css  orchestrator.glade  patientmonitor.glade
modules/02-record-playback/: CMakeLists.txt  README.md  RecordingServiceConfiguration.xml  ReplayServiceConfiguration.xml  module.json  pyproject.toml
modules/03-remote-teleoperation/: CMakeLists.txt  README.md  Scenario1.md  Scenario2.md  Scenario3.md  module.json
modules/04-security-threat/: CMakeLists.txt  README.md  module.json  pyproject.toml
modules/04-security-threat/scripts/: common.sh  kill_all.py  kill_all.sh  launch_exfiltrator.py  launch_exfiltrator.sh  launch_injector.py  launch_injector.sh  xml_setup.py
modules/04-security-threat/security/: .gitignore  setup_threat_security.py  setup_threat_security.sh
modules/04-security-threat/security/ca/ExpiredCa/: ExpiredCa.cnf
modules/04-security-threat/security/ca/RogueCa/: RogueCa.cnf
modules/04-security-threat/security/ca/TrustedCa/: TrustedCa.cnf
modules/04-security-threat/security/domain_scope/ThreatDomain/governance/ThreatDomain/: ThreatDomain.xml
modules/04-security-threat/security/domain_scope/ThreatDomain/permissions/ThreatExfiltrator/: ThreatExfiltrator.xml
modules/04-security-threat/security/domain_scope/ThreatDomain/permissions/ThreatInjector/: ThreatInjector.xml
modules/04-security-threat/security/expired/: ca.cnf
modules/04-security-threat/security/expired/ThreatExfiltrator/: ThreatExfiltratorExpired.cnf
modules/04-security-threat/security/expired/ThreatInjector/: ThreatInjectorExpired.cnf
modules/04-security-threat/security/forged_perms/ThreatExfiltrator/: ThreatExfiltrator.cnf
modules/04-security-threat/security/forged_perms/ThreatInjector/: ThreatInjector.cnf
modules/04-security-threat/security/identities/ThreatExfiltrator/: ThreatExfiltrator.cnf
modules/04-security-threat/security/identities/ThreatInjector/: ThreatInjector.cnf
modules/04-security-threat/security/identity/security-threat/ThreatExfiltrator/ThreatExfiltrator/: ThreatExfiltrator.cnf
modules/04-security-threat/security/identity/security-threat/ThreatInjector/ThreatInjector/: ThreatInjector.cnf
modules/04-security-threat/security/rogue_ca/: RogueCa.cnf
modules/04-security-threat/security/xml/: PermissionsRogueCAExfiltrator.xml  PermissionsRogueCAInjector.xml  PermissionsThreatExfiltrator.xml  PermissionsThreatInjector.xml
modules/04-security-threat/src/: DdsUtils.py  ThreatExfiltrator.py  ThreatInjector.py
modules/04-security-threat/tests/: README.md  conftest.py  module04_test_support.py  test_threat_exfiltrator.py  test_threat_injector.py  test_threat_security_status.py  test_threat_xml_config.py
modules/04-security-threat/xml_config/: ThreatParticipantLibrary.xml  ThreatParticipants.xml  ThreatQos.xml  ThreatTypes.xml
resource/config/: scenarios.json
resource/nat_type_checker/: README.md  nat_type_checker.py
system_arch/: README.md  RefArch.rtisdproj  Types.xml
system_arch/qos/: NonSecureAppsQos.xml  Qos.xml  README.md  SecureAppsQos.xml
system_arch/scripts/: platform_setup.py
system_arch/security/: .gitignore  README.md  (+4 more)
tests/: README.md  run_tests.sh  test_build.py  test_config_parsing.py  test_markdown_lint.py  test_project_build_pipeline.py  test_security_status.py
(+132 files in other folders)
